<resources>
    <string name="app_name">epiCheck</string>
    <string name="pass_hint">Enter password</string>
    <string name="email_hint">Enter email</string>
    <string name="logoimage_hont">LogoImage</string>
    <string name="welcome_hint">Welcome to EpiCheck</string>
    <string name="enter_hint_button">Log in</string>
    <string name="new_acc_hint">Sign up</string>
    <string name="action_search_text">Search</string>
    <string name="account_settings">Change password</string>
    <string name="action_logout_text">Log out</string>
    <string name="enter_name_test">Enter name</string>
    <string name="enter_city">Enter city</string>
    <string name="repeat_pass">Repeat password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="setup_name_hint">Your name...</string>
    <string name="setup_btn_hint">Save changes</string>
    <string name="add_value_text">+</string>
    <string name="image_post_text">Image_post</string>
    <string name="add_description">Add description...</string>
    <string name="save_new_post">Save</string>
    <string name="bottom_home_text">News</string>
    <string name="bottom_about_text">About the fund</string>
    <string name="bottom_profile_text">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview_Postitem">Image</string>
    <string name="post_date_item">Post date</string>
    <string name="res_menu_contacts">Contacts</string>
    <string name="res_button_to_help">Help</string>
    <string name="res_button_to_question">Ask a doctor</string>
    <string name="res_text_about">Loading text...</string>
    <string name="res_text_viewpost">Loading...</string>
    <string name="putOldPass">Enter old password</string>
    <string name="putNewPass">Enter new password</string>
    <string name="ConfirmNewPass">Confirm</string>
    <string name="repeatNewPass">Repeat new password</string>
    <string name="res_del_acc">Delete account</string>
    <string name="res_info_dev">FeedBack</string>
    <string name="likeImage">likeImage</string>
    <string name="res_diag_menu">Diagnosis</string>
    <string name="add_diag_val">add</string>
    <string name="res_fix_btn_text">Episodes today:</string>
    <string name="cnt_txt_epi">0</string>
    <string name="fix_epi_button_click">+Add episode</string>
    <string name="res_tmp_date_value_card">2020-07-11</string>
    <string name="res_desc_card">You can add a detailed description here</string>
    <string name="name_card_val">Name</string>
    <string name="desc_card_val">Description</string>
    <string name="diag_text_field_stat">Diagnosis</string>
    <string name="card_res_name_stat">Name</string>
    <string name="res_card_val_diag">diag</string>
    <string name="res_some_unknown_field">hz</string>
    <string-array name="diagnosis">
        <item>Not yet determined</item>
        <item>Tuberous sclerosis</item>
        <item>Test diagnosis 1</item>
        <item>Test diagnosis 2</item>
    </string-array>
    <string name="title_activity_un_login_profile">UnLoginProfileActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="_456">To save your profile data, you need to register! Create an account?</string>
    <string name="createCardText">To save your episodes and therapy, you need to create a diagnosis (episodes and therapy will be linked to it)! Create a diagnosis?</string>
    <string name="textOK">Got it</string>
    <string name="textTime">Time</string>
    <string name="textSave">Save</string>
    <string name="textDescrEpisode">Date and time can be adjusted before saving if necessary</string>
    <string name="textDate">Date</string>
    <string name="textNullEpisode" >No data</string>
    <string name="textUpdate">Update</string>
    <string name="textAllCntEpisodes">"Total count of Episodes: "</string>
    <string name="textPeriod">Period</string>
    <string name="textInputCardInfo">Fill in the diagnosis information (this can be your diagnosis or your child\'s diagnosis)</string>
    <string name="textName">Name</string>
    <string name="textBirthday">Date of birth</string>
    <string name="textHintInputName">Enter name</string>
    <string name="textDateOuput">Date of output</string>
    <string name="textDozeTeraphy">Dosage</string>
    <string name="textHintDose">Enter dosage</string>
    <string name="textHintNameTer">Enter name</string>
    <string name="textHintCountryTer">Manufacturer/Country</string>
    <string name="textNameTeraphy">Name</string>
    <string name="textDateInput">"Date of input: "</string>
    <string name="textYes">Yes</string>
    <string name="textLater">Later</string>
    <string name="textShare">Share</string>
    <string name="textCancel">Cancel</string>
    <string name="loadTextScreen">Help in the fight against Epilepsy</string>
    <string name="textHideNoActive">Hide inactive</string>
    <string name="textAdd">Add</string>
    <string name="textEdit">Edit</string>
    <string name="textDelete">Delete</string>
    <string name="textInfoChangeDateFix">Date and time can be adjusted before saving if necessary</string>
    <string name="profileInfoAboutCard">You can add information about your children\'s diagnosis, as well as record their epileptic episodes and track statistics in the app</string>
    <string name="profileLabelCity">City:</string>
    <string name="profileLabelName">"Name: "</string>
    <string name="previewTextPhoto">Click on the image to upload a photo</string>
    <string name="welcomePhrase">Welcome to EpiCheck</string>
    <string name="res_menu_history">Statistics</string>
    <string name="res_menu_fix">Episode</string>
    <string name="res_menu_teraphy">Therapy</string>
    <string name="textAttention">Attention</string>
    <string name="textDelDiagDesc">Are you sure you want to delete the diagnosis? This action is irreversible!</string>
    <string name="textNo">No</string>
    <string name="textErrorCheckData">Error! Please check the entered data!</string>
    <string name="textAboutDescrCard">Here you can add a few words about your child...</string>
    <string name="textErrorDescr">An unexpected error occurred. Please try again later.</string>
    <string name="textBack">Back</string>
    <string name="textInformation">Information</string>
    <string name="errorChangePwd">Check the entered data. Passwords may not match or contain invalid characters.</string>
    <string name="successChangePwd">Password successfully changed</string>
    <string name="textErrorMain">Error</string>
    <string name="textDelEpiConfirmBody">Are you sure you want to delete this episode?</string>
    <string name="textUpdateApp">A new version of the app is available! Would you like to update now?</string>
    <string name="textOutAccount">Are you sure you want to log out of the app?</string>
    <string name="textDelAccount">Are you sure you want to delete your account? This action is irreversible!</string>
    <string name="textClose">Close</string>
    <string name="textAlreadyHaveDiagnos">You have already filled out the diagnosis.</string>
    <string name="textErrorCheckDataExceptDescr">Error! Please check the entered data! All fields except the description cannot be empty!</string>
    <string name="textErrorCheckDataExceptDataOut">Error! Please check the entered data! All fields except \'Output Date\' cannot be empty!</string>
    <string name="textSend">Send</string>
    <string name="textChooseImage">Choose an image</string>
    <string name="textErrorCreateAccPwd">Something went wrong during registration. Please check the entered data. Passwords may not match or contain invalid characters (only Latin letters, numbers, and underscores are allowed). The password must be at least 6 characters long. The email must contain an @ symbol and dots.</string>
    <string name="textErrorCreateAcc">User registration error, the email may already be registered</string>
    <string name="textSuccessReg">Successful registration</string>
    <string name="textNullPatientName">Enter the patient\\\'\\s name</string>
    <string name="textNotDetermDiag">Not yet determined</string>
    <string name="textTeraphy">Therapy</string>
    <string name="textPDFBirthday">"Date of birth: "</string>
    <string name="textPDFName">"Name: "</string>
    <string name="textDelTeraphy">Are you sure you want to delete this therapy?</string>
    <string name="textErrDontPermisFileSys">File system usage is not allowed :(</string>
    <string name="textChooseDateField">Choose date</string>
</resources>