<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <item
        android:id="@+id/action_search_btn"
        android:icon="@drawable/action_search_foreground"
        android:title="@string/action_search_text"
        app:showAsAction="always" />
     -->

    <item
        android:id="@+id/action_logout_btn"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/exit_32"
        android:menuCategory="system"
        android:title="@string/action_logout_text"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cnange_pwd_btn"
        android:enabled="true"
        android:icon="@drawable/key_32"
        android:menuCategory="system"
        android:title="@string/account_settings"
        android:visible="true" />

    <item
        android:id="@+id/action_del_acc"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/trash_32"
        android:menuCategory="system"
        android:title="@string/res_del_acc"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/receipt"
        android:menuCategory="system"
        android:title="@string/res_info_dev"
        android:visible="true"
        app:showAsAction="never" />
</menu>