<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="hideKeyboard"
    tools:context=".LoginActivity">

  <ImageView
      android:id="@+id/SignUpPageLogo"
      android:layout_width="126dp"
      android:layout_height="160dp"
      android:layout_marginTop="30dp"
      android:contentDescription="@string/logoimage_hont"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/signup_progress"
      app:srcCompat="@drawable/logo"
      tools:ignore="ImageContrastCheck" />

  <EditText
      android:id="@+id/field_signup_email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/email_hint"
      android:inputType="textEmailAddress"
      android:minHeight="48dp"
      android:paddingLeft="15dp"
      android:paddingRight="15dp"
      android:textAlignment="viewStart"
      android:textColorHint="#78909C"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:text="@string/welcome_hint"
      android:textAlignment="center"
      android:textColor="@color/purple_700"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/SignUpPageLogo" />

  <EditText
      android:id="@+id/field_signup_password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/pass_hint"
      android:inputType="textPassword"
      android:minHeight="48dp"
      android:paddingLeft="15dp"
      android:paddingRight="15dp"
      android:textColorHint="#78909C"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/field_signup_email" />

  <Button
      android:id="@+id/btn_login"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:backgroundTint="#E91E63"
      android:minWidth="150dp"
      android:text="@string/enter_hint_button"
      android:textAllCaps="false"
      android:textColor="#FEFEFE"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/field_signup_password"
      tools:ignore="TextContrastCheck" />

  <Button
      android:id="@+id/btn_to_create_acc"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:backgroundTint="@color/purple_light"
      android:minWidth="230dp"
      android:text="@string/new_acc_hint"
      android:textAllCaps="false"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_login"
      tools:ignore="TextContrastCheck" />

  <ProgressBar
      android:id="@+id/signup_progress"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:indeterminate="true"
      android:maxHeight="25dp"
      android:minHeight="16dp"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>